@@ -501,6 +501,34 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the outline color of the text (used when TextOutlineThickness > 0)
+        /// @param outlineColor  New text outline color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setTextOutlineColor(Color outlineColor);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the outline color of the text (used when TextOutlineThickness > 0)
+        /// @param Text outline color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Color getTextOutlineColor() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the thickness of the text outline (0 by default, which means there is no outline).
+        /// @param outlineThickness  New text outline thickness
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setTextOutlineThickness(float outlineThickness);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the thickness of the text outline
+        /// @param Text outline thickness
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        float getTextOutlineThickness() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     };
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
