@@ -178,7 +178,7 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        /// @brief Changes the text color
+        /// @brief Changes the text fill color
         ///
         /// @param color  The new text color
         ///
@@ -187,7 +187,7 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        /// @brief Returns the text color
+        /// @brief Returns the text fill color
         ///
         /// @return text color
         ///
@@ -251,6 +251,38 @@ namespace tgui
         ///
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         TextStyle getStyle() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the text outline color
+        ///
+        /// @param color  The new text outline color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setOutlineColor(Color color);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the text outline color
+        ///
+        /// @return text outline color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Color getOutlineColor() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the text outline thickness
+        ///
+        /// @param color  The new text outline thickness
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setOutlineThickness(float thickness);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the text outline thickness
+        ///
+        /// @return text outline thickness
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        float getOutlineThickness() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -322,6 +354,7 @@ namespace tgui
         Vector2f     m_size;
         Font         m_font;
         Color        m_color;
+        Color        m_outlineColor;
         float        m_opacity = 1;
     };
 
