@@ -39,6 +39,9 @@ namespace tgui
 
     TGUI_RENDERER_PROPERTY_TEXT_STYLE(LabelRenderer, TextStyle, sf::Text::Regular)
 
+    TGUI_RENDERER_PROPERTY_NUMBER(LabelRenderer, TextOutlineThickness, 0)
+    TGUI_RENDERER_PROPERTY_COLOR(LabelRenderer, TextOutlineColor, {})
+
     TGUI_RENDERER_PROPERTY_TEXTURE(LabelRenderer, TextureBackground)
 
     TGUI_RENDERER_PROPERTY_RENDERER(LabelRenderer, Scrollbar, "scrollbar")
